--- a/index.css
+++ b/index.css
@@ -1,4 +1,5 @@
 body {
+    background-color: #B2B1B9;
     margin: 4 0 0 0;
     height: 100vh;
     font-family: Arial, Helvetica, sans-serif;
@@ -40,8 +41,10 @@ hr {
 /* Bio Header */
 
 .bio-header {
-    margin-left: 10rem;
+    border:#ccd7e4;
+    border-style: solid;
     margin-top: 20px;
+    margin-bottom: 20px;
     display: flex;
     justify-content: flex-start;
     height: 100%;
@@ -49,9 +52,10 @@ hr {
 }
 
 .user-pic {
+    margin-left:4rem;
     height: 10%;
     width: 10%;
-    padding: 15px 15px 15px 0;
+    padding: 15px 15px 15px 5px;
 }
 
 .bio-title {
@@ -89,6 +93,8 @@ hr {
 /* Form */
 
 .form {
+    border:#ccd7e4;
+    border-style: solid;
     display: flex;
     flex-direction: column;
     align-items: center;
