--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #B2B1B9;
+    background-color: #e9e8eb;
     margin: 4 0 0 0;
     height: 100vh;
     font-family: Arial, Helvetica, sans-serif;
@@ -41,7 +41,8 @@ hr {
 /* Bio Header */
 
 .bio-header {
-    border:#ccd7e4;
+    background-color: white;
+    border:white;
     border-style: solid;
     margin-top: 20px;
     margin-bottom: 20px;
@@ -93,7 +94,8 @@ hr {
 /* Form */
 
 .form {
-    border:#ccd7e4;
+    background-color: white;
+    border:white;
     border-style: solid;
     display: flex;
     flex-direction: column;
